apps/k8s_resources/ingresses/azure_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: 7448befe35534f3d9a73.westeurope.aksapp.io
      http:
        paths:
          - path: /svca
            pathType: Prefix
            backend:
              service:
                name: svc-a
                port:
                  number: 5000
          - path: /svcb
            pathType: Prefix
            backend:
              service:
                name: svc-a
                port:
                  number: 8888
