apps/k8s_resources/ingresses/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-ingress
spec:
  ingressClassName: ngnix
  rules:
  - host: 7448befe35534f3d9a73.westeurope.aksapp.io
    http:
      paths:
      - backend:
          service:
            name: svc-a
            port:
              number: 5000
        path: /svca
        pathType: Prefix
      - backend:
          service:
            name: svc-b
            port:
              number: 8888
        path: /svcb
        pathType: Prefix
status:
  loadBalancer: {}
