apps/k8s_resources/ingresses/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /servicea
            pathType: Prefix
            backend:
              service:
                name: svc-a
                port:
                  number: 5000
          - path: /serviceb
            pathType: Prefix
            backend:
              service:
                name: svc-a
                port:
                  number: 8888
